--- a/frontend/src/core/assets/styles/custom.scss
+++ b/frontend/src/core/assets/styles/custom.scss
@@ -1,6 +1,7 @@
 $theme-colors: (
     "primary": #BBB,
-    "secondary": #E1E1E1
+    "secondary": #E1E1E1,
+    "third": #2d769a
 );
 
 $body-bg: #F2F2F2;
