--- a/frontend/src/core/components/Navbar/styles.scss
+++ b/frontend/src/core/components/Navbar/styles.scss
@@ -5,12 +5,12 @@
     display: flex;
     flex-wrap: nowrap;
     align-items: center;
-    padding: 0 40px;
+    padding: 50px 40px;
     margin: 0px; 
 }
 
 .navbar-logo-text {
-    width: 50%;
+    width: 60%;
     color: #FFF;
     display: flex;
     align-items: center;
