--- a/frontend/src/core/components/Navbar/styles.scss
+++ b/frontend/src/core/components/Navbar/styles.scss
@@ -5,12 +5,12 @@
     display: flex;
     flex-wrap: nowrap;
     align-items: center;
-    padding: 50px 40px;
+    padding: 50px 80px;
     margin: 0px; 
 }
 
 .navbar-logo-text {
-    width: 60%;
+    width: 30%;
     color: #FFF;
     display: flex;
     align-items: center;
@@ -29,7 +29,7 @@
    width: 55%;
    display: flex;
    flex: 1;
-   justify-content: center;
+   justify-content: left;
    flex-wrap: nowrap; 
 }
 
