--- a/frontend/src/pages/Home/styles.scss
+++ b/frontend/src/pages/Home/styles.scss
@@ -1,3 +1,32 @@
+.featured{
+    height: 80vh;
+    
+}
+
+.featured--vertical{
+    width: inherit;
+    height: inherit; 
+    background: linear-gradient(to bottom, #BBB 5%, transparent);
+    background: linear-gradient(to top, #BBB 5%, transparent);
+}
+
+.featured--horizontal{
+    width: inherit;
+    height: inherit;
+    
+    background: linear-gradient(to right, #BBB 30%, transparent 40%);
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    padding-left: 30px;
+    padding-bottom: 150px;
+    padding-top : 70px;
+}
+
+.home-main-logo {
+    width: 20%;
+}
+
 .home-container {
     text-align: center;
     padding: 0;
@@ -5,14 +34,11 @@
 }
 
 .home-content {
-    background: #BBB;
-}
-
-.home-main-image {
-    width: 100%;
-    max-height: 500px;
-    padding-top: 0;
-    margin-top: 0;
+    background: rgb(83, 92, 42);
+    color: #FFF;
+    display: flex;
+    align-items: center;
+    padding: 10px 50px;
 }
 
 .home-title {
@@ -21,15 +47,13 @@
 
 .home-paraph {
     padding: 20px 50px;
+    display: flex;
+    justify-content: left;
 }
 
-.home-mission-paraph {
-    font-size: 20px;
-    padding: 20px 50px;
-}
-
-em strong {
-    color: red;
+.home-content-img {
+    width: 70%;
+    border-radius: 50%;
 }
 
 .home-title-benefits {
