Layout Home completed

--- a/frontend/src/core/components/ButtonIcon/styles.scss
+++ b/frontend/src/core/components/ButtonIcon/styles.scss
@@ -6,7 +6,7 @@
  }
  
  .btn-icon-content {
-    background-color: #2e4b0d;
+    background-color: #cea903;
     width: 70px;
     border-radius: 0px 10px 10px 0px;
     display: flex;
