--- a/frontend/src/pages/Home/styles.scss
+++ b/frontend/src/pages/Home/styles.scss
@@ -1,20 +1,23 @@
+.home-container {
+    padding: 0;
+    margin: 0;
+}
+
 .featured{
-    height: 80vh;
-    
+    height: 80vh;  
 }
 
 .featured--vertical{
     width: inherit;
     height: inherit; 
-    background: linear-gradient(to bottom, #BBB 5%, transparent);
-    background: linear-gradient(to top, #BBB 5%, transparent);
+    background: linear-gradient(to bottom, #eee7e7 5%, transparent);
+    background: linear-gradient(to top, #eee7e7 5%, transparent);
 }
 
 .featured--horizontal{
     width: inherit;
     height: inherit;
-    
-    background: linear-gradient(to right, #BBB 30%, transparent 40%);
+    background: linear-gradient(to right, #eee7e7 30%, transparent 40%);
     display: flex;
     flex-direction: column;
     justify-content: left;
@@ -27,57 +30,61 @@
     width: 20%;
 }
 
-.home-container {
-    text-align: center;
-    padding: 0;
-    margin: 0;
+.home-container-title {
+    margin-top: 50px;
+    display: flex;
+    justify-content: left;
 }
 
 .home-content {
-    background: rgb(83, 92, 42);
+    background: #cea903;
     color: #FFF;
     display: flex;
     align-items: center;
-    padding: 10px 50px;
+    justify-content: space-between;
+    padding: 30px 50px;
 }
 
-.home-title {
+.home-content-title {
     padding: 20px 50px;
 }
 
-.home-paraph {
+.home-content-paraph {
     padding: 20px 50px;
     display: flex;
     justify-content: left;
 }
 
 .home-content-img {
-    width: 70%;
-    border-radius: 50%;
+    width: 40%;
+    border-radius: 1000px;
 }
 
-.home-title-benefits {
+.home-title-services {
     text-align: center;
     padding: 50px 50px;
+    background: #eee7e7;
 }
 
-.home-items {
-    font-style: italic;
-
-}
-
-.product-list {
+.home-service-list {
     display: flex;
     justify-content: center; 
+    padding: 0px 50px;
+    background: #eee7e7;
+    
 }
 
 .product-card {
     border: 1px solid black;
     border-radius: 10px;
-    margin-right: 50px;
-    height: 230px;
-    width: 250px;
+    margin-right: 20px;
     margin-bottom: 50px;
+    width: 3500px;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .product-card:hover {
@@ -85,7 +92,7 @@
 }
 
 .product-img {
-    width: 80%;
+    width: 50%;
     border-radius: 100%;
 }
 
@@ -96,7 +103,7 @@
 .home-product-search {
     display: flex;
     justify-content: center;
-    padding: 0 0 50px 0;
+    padding: 50px 50px 20px 50px;
     align-items: center;
 }
 
@@ -104,4 +111,8 @@
     padding: 5px 5px;
     font-style: italic;
     font-weight: bold;
+    display: flex;
+    justify-content: center;
 }
+
+
