--- a/frontend/src/pages/Admin/components/NavbarAdmin/styles.scss
+++ b/frontend/src/pages/Admin/components/NavbarAdmin/styles.scss
@@ -18,12 +18,12 @@
     color: #9E9E9E;
 
     &.active {
-        background: rgba(64, 123, 255, 0.3);
-        color: #2d769a;
+        background: rgba(255, 252, 64, 0.3);
+        color: #383636;
     }
 
     &:hover {
-        color: #2d769a;
+        color: #383636;
     }
 }
 
