--- a/frontend/src/core/components/Navbar/styles.scss
+++ b/frontend/src/core/components/Navbar/styles.scss
@@ -1,7 +1,7 @@
 .navbar-main {
     width: 100% !important;
     height: 70px;
-    color: black;
+    color: rgb(255, 251, 251);
     display: flex;
     flex-wrap: nowrap;
     align-items: center;
@@ -58,7 +58,7 @@
     }
 
     &:hover {
-        color: #FFF;
+        color: #C78C19;
     }
 }
 
