--- a/frontend/src/pages/Admin/components/Peca/Card/styles.scss
+++ b/frontend/src/pages/Admin/components/Peca/Card/styles.scss
@@ -1,17 +1,17 @@
-.medico-card-admin {
+.peca-card-admin {
     margin-bottom: 20px;
     border-radius: 10px;
     display: flex;
     flex-direction: row;
 }
 
-.medico-card-img-admin {
+.peca-card-img-admin {
     height: 100px;
     width: 100px;
     margin: 5px 10px;
 }
 
-.medico-card-name-admin {
+.peca-card-name-admin {
     font-size: 18px;
     line-height: 25px;
     letter-spacing: -0.015em;
@@ -28,7 +28,7 @@
         margin-left: 10px;
     }
 
-    .medico-card-img-admin {
+    .peca-card-img-admin {
         height: 10px;
         width: 10px;
         margin: 5px 10px;
