--- a/frontend/src/core/components/Navbar/styles.scss
+++ b/frontend/src/core/components/Navbar/styles.scss
@@ -104,7 +104,7 @@
         display: flex;
         flex-direction: column;
         padding: 10px;
-        background: #2d769a;
+        background: #263238; 
         position: absolute;
         z-index: 10;
     }
