--- a/frontend/src/pages/Catalog/styles.scss
+++ b/frontend/src/pages/Catalog/styles.scss
@@ -19,7 +19,7 @@
     margin-right: 10px;
 }
 
-.catalog-medicos {
+.catalog-pecas {
     margin-top: 40px;
     display: grid;
     grid-template-columns: repeat(auto-fill, 400px);
@@ -38,7 +38,7 @@
         margin-bottom: 20px;
     }
 
-    .catalog-medicos {
+    .catalog-pecas {
         grid-template-columns: repeat(auto-fill, 220px);
         grid-gap: 33px 10px;
     }
@@ -55,7 +55,7 @@
         margin-bottom: 20px;
     }
 
-    .catalog-medicos {
+    .catalog-pecas {
         grid-template-columns: repeat(auto-fill, 100%);
     }
 }
