--- a/frontend/src/pages/Catalog/components/PecaDetails/styles.scss
+++ b/frontend/src/pages/Catalog/components/PecaDetails/styles.scss
@@ -14,7 +14,7 @@
   }
 
 .medico-details-icon-goback {
-  color: #2d769a;
+  color: #C78C19; 
   transform: rotate(-180deg);
   margin-right: 30px;
 }
