--- a/frontend/src/pages/Home/styles.scss
+++ b/frontend/src/pages/Home/styles.scss
@@ -75,16 +75,18 @@
 }
 
 .service-card {
+    background: #FFF;
     border: 1px solid black;
     border-radius: 10px;
     margin-right: 20px;
     margin-bottom: 50px;
-    width: 350px;
+    width: 300px;
     height: 300px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 20px;
 }
 
 .service-card:hover {
@@ -92,7 +94,7 @@
 }
 
 .service-img {
-    width: 50%;
+    width: 70%;
     border-radius: 100%;
 }
 
@@ -113,6 +115,7 @@
     font-weight: bold;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 @media (max-width: 576px) {
