Add Footer and refactor layout 576px

--- a/frontend/src/pages/Home/styles.scss
+++ b/frontend/src/pages/Home/styles.scss
@@ -119,6 +119,10 @@
 }
 
 @media (max-width: 576px) {
+
+    .home-container {
+        width: 110% !important;
+    }
     .featured {
         width: 100% !important;
     }
@@ -144,7 +148,7 @@
     .home-service-list {
         display: block;
         justify-content: center; 
-        padding: 0px 50px;
+       
         background: #eee7e7;
         
     }
